添加 mysql ，动态输出数据

--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/woyaohaohaoxuexi/blog-server/issues"
   },
-  "homepage": "https://github.com/woyaohaohaoxuexi/blog-server#readme"
+  "homepage": "https://github.com/woyaohaohaoxuexi/blog-server#readme",
+  "devDependencies": {
+    "mysql": "^2.17.1"
+  }
 }
