--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "devDependencies": {
     "cross-env": "^7.0.2",
     "mysql": "^2.17.1"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
